tests/integration/conformance/cases/networking/traffic/stage0/input.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
spec:
  hosts:
  - dispatch
  http:
  - match:
    - uri:
        exact: /echo1
    route:
    - destination:
        host: echo1
  - match:
    - uri:
        exact: /echo2
    route:
    - destination:
        host: echo2
---
apiVersion: v1
kind: Service
metadata:
  name: dispatch
spec:
  ports:
  - port: 8080
    name: http-dummy
